FIX: spacing on header, shadow on card and button on Footer modified

--- a/public/assets/css/tailwind.css
+++ b/public/assets/css/tailwind.css
@@ -102,9 +102,6 @@
     --font-weight-bold: 700;
     --font-weight-black: 900;
     --tracking-tighter: -0.05em;
-    --tracking-tight: -0.025em;
-    --tracking-normal: 0em;
-    --tracking-wide: 0.025em;
     --leading-normal: 1.5;
     --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
@@ -3149,9 +3146,6 @@
     padding: var(--toast-padding-x);
     overflow-wrap: break-word;
   }
-  .p-0 {
-    padding: calc(var(--spacing) * 0);
-  }
   .p-1 {
     padding: calc(var(--spacing) * 1);
   }
@@ -3232,9 +3226,6 @@
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
-  }
-  .px-4\.5 {
-    padding-inline: calc(var(--spacing) * 4.5);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -3704,9 +3695,6 @@
   .text-\[12\.8px\] {
     font-size: 12.8px;
   }
-  .text-\[15px\] {
-    font-size: 15px;
-  }
   .text-\[16px\] {
     font-size: 16px;
   }
@@ -3728,37 +3716,9 @@
   .text-\[76\.294px\] {
     font-size: 76.294px;
   }
-  .leading-0 {
-    --tw-leading: calc(var(--spacing) * 0);
-    line-height: calc(var(--spacing) * 0);
-  }
-  .leading-16 {
-    --tw-leading: calc(var(--spacing) * 16);
-    line-height: calc(var(--spacing) * 16);
-  }
-  .leading-18 {
-    --tw-leading: calc(var(--spacing) * 18);
-    line-height: calc(var(--spacing) * 18);
-  }
-  .leading-20 {
-    --tw-leading: calc(var(--spacing) * 20);
-    line-height: calc(var(--spacing) * 20);
-  }
-  .leading-25 {
-    --tw-leading: calc(var(--spacing) * 25);
-    line-height: calc(var(--spacing) * 25);
-  }
   .leading-26 {
     --tw-leading: calc(var(--spacing) * 26);
     line-height: calc(var(--spacing) * 26);
-  }
-  .leading-28 {
-    --tw-leading: calc(var(--spacing) * 28);
-    line-height: calc(var(--spacing) * 28);
-  }
-  .leading-30 {
-    --tw-leading: calc(var(--spacing) * 30);
-    line-height: calc(var(--spacing) * 30);
   }
   .leading-\[1\.5\] {
     --tw-leading: 1.5;
@@ -3771,10 +3731,6 @@
   .leading-\[2\] {
     --tw-leading: 2;
     line-height: 2;
-  }
-  .leading-\[120px\] {
-    --tw-leading: 120px;
-    line-height: 120px;
   }
   .leading-\[130\%\] {
     --tw-leading: 130%;
@@ -3812,14 +3768,6 @@
     --tw-font-weight: var(--font-weight-thin);
     font-weight: var(--font-weight-thin);
   }
-  .tracking-\[-10\%\] {
-    --tw-tracking: -10%;
-    letter-spacing: -10%;
-  }
-  .tracking-\[-50\%\] {
-    --tw-tracking: -50%;
-    letter-spacing: -50%;
-  }
   .tracking-\[0\.25em\] {
     --tw-tracking: 0.25em;
     letter-spacing: 0.25em;
@@ -3832,21 +3780,9 @@
     --tw-tracking: 1px;
     letter-spacing: 1px;
   }
-  .tracking-normal {
-    --tw-tracking: var(--tracking-normal);
-    letter-spacing: var(--tracking-normal);
-  }
-  .tracking-tight {
-    --tw-tracking: var(--tracking-tight);
-    letter-spacing: var(--tracking-tight);
-  }
   .tracking-tighter {
     --tw-tracking: var(--tracking-tighter);
     letter-spacing: var(--tracking-tighter);
-  }
-  .tracking-wide {
-    --tw-tracking: var(--tracking-wide);
-    letter-spacing: var(--tracking-wide);
   }
   .text-nowrap {
     text-wrap: nowrap;
@@ -3981,10 +3917,6 @@
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-2xl {
-    --tw-shadow: 16px 39px 67px 0px var(--tw-shadow-color, rgba(0, 0, 0, 0.11)), 1px 20px 65px 0px var(--tw-shadow-color, rgba(0, 0, 0, 0.02)), 2px 10px 10px 0px var(--tw-shadow-color, rgba(0, 0, 0, 0.01)), 0px -2px 6px 0px var(--tw-shadow-color, rgba(0, 0, 0, 0.03));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-lg {
     --tw-shadow: 0 1rem 3rem var(--tw-shadow-color, color-mix(in srgb, #000 17.5%, transparent));
     @supports (color: color-mix(in lab, red, red)) {
@@ -4002,12 +3934,6 @@
       --tw-shadow: 0 0.125rem 0.25rem var(--tw-shadow-color, color-mix(in oklab, var(--color-black) 7.5%, transparent));
     }
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[\#B9C1B31A\] {
-    --tw-shadow-color: #B9C1B31A;
-    @supports (color: color-mix(in lab, red, red)) {
-      --tw-shadow-color: color-mix(in oklab, #B9C1B31A var(--tw-shadow-alpha), transparent);
-    }
   }
   .blur {
     --tw-blur: blur(8px);
@@ -4078,12 +4004,6 @@
       @media (hover: hover) {
         border-color: #9EE970;
       }
-    }
-  }
-  .max-lg\:text-8xl {
-    @media (width < 992px) {
-      font-size: var(--text-8xl);
-      line-height: var(--tw-leading, var(--text-8xl--line-height));
     }
   }
   .sm\:absolute {
@@ -13842,12 +13762,6 @@
   .lg\:text-start {
     @media (width >= 992px) {
       text-align: start;
-    }
-  }
-  .lg\:text-8xl {
-    @media (width >= 992px) {
-      font-size: var(--text-8xl);
-      line-height: var(--tw-leading, var(--text-8xl--line-height));
     }
   }
   .lg\:text-base {
